# dhg-monorepo

./: .cursorrc  .cursorrules  .gitignore  .vercelignore  STRUCTURE.md  build.mjs  cursor-rules.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pre-commit  railway.toml  turbo.json  vercel.json
.backups/working-login/: pnpm-workspace.yaml.bak
apps/dhg-baseline/: .gitignore  README.md  index.html  jest.config.ts  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vercel.json  (+3 more)
apps/dhg-baseline/backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  start-server.sh
apps/dhg-baseline/backend/app/: main.py
apps/dhg-baseline/backend/app/core/: config.py
backend/: .env.example  .gitignore  README.md  __init__.py  installed.txt  package.json  pyproject.toml  requirements.frozen.txt  requirements.test.txt  requirements.txt  start-server.sh
backend/api/v1/: auth.py
backend/app/: __init__.py  auth.py  config.py  dependencies.py  health.py  main.py  supabase_client.py
backend/app/auth/: router.py
backend/core/: app.py
backend/scripts/: ngrok.sh
backend/services/auth/: supabase_client.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_health.py
docs/: backend-guidelines.md  cursor-rules.md  dhg-baseline-backend-setup.md  monorepo-guide.md  structure.md  supabase-key-management.md  using-git.md
scripts/: backup-config.sh  clean-python.sh  ngrok.sh  restore-config.sh  setup-backend-tests.sh  show-tree.sh  start-backend-safe.sh  start-backend.sh  start-frontend.sh  tree.sh
(+127 files in other folders)
