[project]
name = "dhg-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-dotenv==1.0.0",
    "supabase==2.0.3",
    "pytest==7.4.0",
    "httpx==0.24.1",
    "pytest-asyncio==0.21.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"

[project.scripts]
start = "uvicorn core.app:app --reload" 