[project]
name = "dhg-baseline-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-dotenv==1.0.0",
    "supabase==2.0.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"

[project.scripts]
start = "uvicorn app.main:app --reload" 